--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
-    "frontmatter-markdown-loader": "^3.7.0",
+    "gray-matter": "^4.0.3",
     "netlify-cms-app": "^2.15.72",
     "next": "13.1.2",
+    "raw-loader": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
