--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "netlify-cms-app": "^2.15.72",
     "next": "13.1.2",
     "raw-loader": "^4.0.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "4.9.4"
   },
   "devDependencies": {
